Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-open-plugin",
+  "name": "open-browser-webpack-plugin",
   "version": "0.0.1",
   "description": "Opens the browser when Webpack is ready serving your files.",
   "main": "index.js",
