--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "debug": "node fixtures/debug.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "dev": "mocha -w test/**/*.js "
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "open": "0.0.5"
   },
   "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
     "webpack": "^1.12.1"
   }
 }
