--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "open-browser-webpack-plugin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Opens the browser when Webpack is ready serving your files.",
   "main": "index.js",
   "scripts": {
     "debug": "node fixtures/debug.js",
-    "test": "mocha test",
-    "dev": "mocha -w test/**/*.js "
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -31,8 +30,6 @@
     "open": "0.0.5"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "mocha": "^2.3.4",
     "webpack": "^1.12.1"
   }
 }
